--- a/ProjectAries/appsettings.json
+++ b/ProjectAries/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ProjectAries-8B38E759-0FF6-4440-9B07-D3A48B945B3F;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=192.16.0.101,1401;Database=DockerDB;User ID=sa;Password=P@ssw0rD"
   },
   "Logging": {
     "LogLevel": {
